--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Code-Apprentice <codeguru42@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+opencv-python = "^4.6.0"
 
 [tool.poetry.dev-dependencies]
 
