--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Code-Apprentice <codeguru42@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 opencv-python = "^4.6.0"
+Django = "^4.1.3"
 
 [tool.poetry.dev-dependencies]
 
