--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 opencv-python = "^4.6.0"
 Django = "^4.1.3"
 environs = "^9.5.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
