--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,25 @@
 name: Deploy
 on: [push]
+
 jobs:
-  hello:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Hello, World"
+  - name: Checkout repo
+    uses: actions/checkout@v3
+
+  - name: Configure AWS credentials
+    uses: aws-actions/configure-aws-credentials@v1
+    with:
+      role-to-assume: arn:aws:iam::123456789012:role/my-github-actions-role
+      aws-region: aws-region-1
+
+  - name: Login to Amazon ECR
+    id: login-ecr
+    uses: aws-actions/amazon-ecr-login@v1
+
+  - name: Build, tag, and push docker image to Amazon ECR
+    env:
+      REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      REPOSITORY: my-ecr-repo
+      IMAGE_TAG: ${{ github.sha }}
+    run: |
+      docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+      docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
