--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::123456789012:role/my-github-actions-role
-          aws-region: aws-region-1
+          role-to-assume: arn:aws:iam::123456789012:role/github-actions
+          aws-region: aws-west-1
 
       - name: Login to Amazon ECR
         id: login-ecr
