--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ environs = "^9.5.0"
 gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
