Add policy to access ECR

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -29,6 +29,8 @@ Resources:
             Condition:
               StringLike:
                 token.actions.githubusercontent.com:sub: !Sub repo:${GitHubOrg}/${RepositoryName}:*
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess
       Path: /gocapture/
 
   GithubOidc:
