Rename ecr repository

--- a/cloud-formation/ecr.yml
+++ b/cloud-formation/ecr.yml
@@ -6,5 +6,5 @@ Resources:
         EncryptionType: AES256
       ImageScanningConfiguration:
         ScanOnPush: true
-      RepositoryName: GoCapture
+      RepositoryName: go-capture
       RepositoryPolicyText: Json
