Add CloudFormation access to Github Role

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -30,6 +30,7 @@ Resources:
               StringLike:
                 token.actions.githubusercontent.com:sub: !Sub repo:${GitHubOrg}/${RepositoryName}:*
       ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AWSCloudFormationFullAccess
         - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess
       Path: /gocapture/
 
