Add parameter overrides for deploying github role

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           name: GithubRole
           template: cloud-formation/github-role.yml
+          parameter-overrides: "GitHubOrg=${{ github.repository_owner }},RepositoryName=${{ github.repository }}"
 
       - name: Deploy ECR repository
         uses: aws-actions/aws-cloudformation-github-deploy@v1
