--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -33,11 +33,18 @@ Resources:
       Policies:
         - PolicyDocument: {
             "Version": "2012-10-17",
-            "Statement": {
-              "Effect": Allow,
-              "Action": cloudformation:DescribeStacks,
-              "Resource": "*"
-            }
+            "Statement": [
+              {
+                "Effect": Allow,
+                "Action": cloudformation:DescribeStacks,
+                "Resource": "*"
+              },
+              {
+                "Effect": Allow,
+                "Action": cloudformation:CreateChangeSet,
+                "Resource": "*"
+              }
+            ]
           }
           PolicyName: CloudFormationPolicy
 
