Add DescribeChangeSet permission

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -43,6 +43,11 @@ Resources:
                 "Effect": Allow,
                 "Action": cloudformation:CreateChangeSet,
                 "Resource": "*"
+              },
+              {
+                "Effect": Allow,
+                "Action": cloudformation:DescribeChangeSet,
+                "Resource": "*"
               }
             ]
           }
