Add UpdateAssumeRolePolicy permission

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -57,6 +57,17 @@ Resources:
             ]
           }
           PolicyName: CloudFormationPolicy
+        - PolicyDocument: {
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Effect": Allow,
+                "Action": iam:UpdateAssumeRolePolicy,
+                "Resource": "*"
+              },
+            ]
+          }
+          PolicyName: IamPolicy
 
   GithubOidc:
     Type: AWS::IAM::OIDCProvider
