Add GetRole permission

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -65,6 +65,11 @@ Resources:
                 "Action": iam:UpdateAssumeRolePolicy,
                 "Resource": "*"
               },
+              {
+                "Effect": Allow,
+                "Action": iam:GetRole,
+                "Resource": "*"
+              },
             ]
           }
           PolicyName: IamPolicy
