Explicit role name

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -73,6 +73,7 @@ Resources:
             ]
           }
           PolicyName: IamPolicy
+      RoleName: GithubRole
 
   GithubOidc:
     Type: AWS::IAM::OIDCProvider
