--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
           name: GithubRole
           template: cloud-formation/github-role.yml
           parameter-overrides: "GitHubOrg=${{ github.repository_owner }},RepositoryName=${{ github.repository }}"
+          capabilities: CAPABILITY_NAMED_IAM
 
       - name: Deploy ECR repository
         uses: aws-actions/aws-cloudformation-github-deploy@v1
