--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -53,6 +53,11 @@ Resources:
                 "Effect": Allow,
                 "Action": cloudformation:ExecuteChangeSet,
                 "Resource": "*"
+              },
+              {
+                "Effect": Allow,
+                "Action": cloudformation:CreateStack,
+                "Resource": "*"
               }
             ]
           }
