Add CreateRepository permission

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -78,6 +78,17 @@ Resources:
             ]
           }
           PolicyName: IamPolicy
+        - PolicyDocument: {
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Effect": Allow,
+                "Action": ecr:CreateRepository,
+                "Resource": "*"
+              },
+            ]
+          }
+          PolicyName: EcrPolicy
       RoleName: GithubRole
 
   GithubOidc:
