Add ecr:GetAuthorizationToken permission

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -86,6 +86,11 @@ Resources:
                 "Action": ecr:CreateRepository,
                 "Resource": "*"
               },
+              {
+                "Effect": Allow,
+                "Action": ecr:GetAuthorizationToken,
+                "Resource": "*"
+              },
             ]
           }
           PolicyName: EcrPolicy
