Add iam:PutRolePolicy permission

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -75,6 +75,11 @@ Resources:
                 "Action": iam:GetRole,
                 "Resource": "*"
               },
+              {
+                "Effect": Allow,
+                "Action": iam:PutRoleRole,
+                "Resource": "*"
+              },
             ]
           }
           PolicyName: IamPolicy
