Add cloudformation:DeleteChangeSet permission

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -61,6 +61,11 @@ Resources:
                 "Action": cloudformation:CreateStack,
                 "Resource": "*"
               },
+              {
+                "Effect": Allow,
+                "Action": cloudformation:DeleteChangeSet,
+                "Resource": "*"
+              },
             ]
           }
         - PolicyName: IamPolicy
