--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           name: GoCaptureECR
           template: cloud-formation/ecr.yml
+          no-fail-on-empty-changeset: 1
 
       - name: Login to Amazon ECR
         id: login-ecr
