--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -95,6 +95,11 @@ Resources:
                 "Action": ecr:GetAuthorizationToken,
                 "Resource": "*"
               },
+              {
+                "Effect": Allow,
+                "Action": ecr:PutImage,
+                "Resource": "*"
+              },
             ]
           }
 
