--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           name: GoCaptureGithubRole
           template: cloud-formation/github-role.yml
-          parameter-overrides: "GithubOrg=${{ github.repository_owner }},RepositoryName=${{ github.repository }}"
+          parameter-overrides: "Repository=${{ github.repository }}"
           capabilities: CAPABILITY_NAMED_IAM
 
       - name: Deploy ECR repository
