--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
           template: cloud-formation/github-role.yml
           parameter-overrides: "Repository=${{ github.repository }}"
           capabilities: CAPABILITY_NAMED_IAM
+          no-fail-on-empty-changeset: 1
 
       - name: Deploy ECR repository
         uses: aws-actions/aws-cloudformation-github-deploy@v1
