Add workflow_dispatch and workflow_run triggers to deploy workflow.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,11 @@
 name: Deploy
 on:
-  - push
+  workflow_dispatch:
+  workflow_run:
+    workflows:
+      - Build
+    types:
+      - completed
 
 jobs:
   deploy:
