Add ecs:DescribeClusters permissions to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -84,6 +84,19 @@ Resources:
               },
             ]
           }
+        - PolicyName: EcsPolicy
+          PolicyDocument: {
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Effect": Allow,
+                "Action": [
+                  ecs:DescribeClusters
+                ],
+                "Resource": "*"
+              },
+            ]
+          }
 
   GithubOidc:
     Type: AWS::IAM::OIDCProvider
