Add ecs:CreateCluster permissions to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -91,7 +91,8 @@ Resources:
               {
                 "Effect": "Allow",
                 "Action": [
-                  "ecs:DescribeClusters"
+                  "ecs:DescribeClusters",
+                  "ecs:CreateCluster"
                 ],
                 "Resource": "*"
               }
