Roles for ECS task

--- a/cloud-formation/ecs.yaml
+++ b/cloud-formation/ecs.yaml
@@ -1,4 +1,14 @@
 Resources:
+  ExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: GoCaptureExecutionRole
+      Path: /gocapture/
+  TaskRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: GoCaptureTaskRole
+      Path: /gocapture/
   Cluster:
     Type: AWS::ECS::Cluster
     Properties:
