Add AssumeRolePolicyDocument for TaskRole

--- a/cloud-formation/ecs.yaml
+++ b/cloud-formation/ecs.yaml
@@ -14,6 +14,12 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       RoleName: GoCaptureTaskRole
+      AssumeRolePolicyDocument:
+        Statement:
+          - Effect: Allow
+            Action: sts:AssumeRole
+            Principle:
+              Service: ecs-tasks.amazonaws.com
       Path: /gocapture/
   Cluster:
     Type: AWS::ECS::Cluster
