Add iam:CreateRole to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -43,6 +43,7 @@ Resources:
               {
                 "Effect": "Allow",
                 "Action": [
+                  iam:CreateRole,
                   iam:CreateUser,
                   iam:DeleteUser,
                   iam:DeleteUserPolicy,
