Add iam:DeleteRole to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -45,6 +45,7 @@ Resources:
                 "Action": [
                   iam:CreateRole,
                   iam:CreateUser,
+                  iam:DeleteRole,
                   iam:DeleteUser,
                   iam:DeleteUserPolicy,
                   iam:GetRole,
