Add ecs:RegisterTaskDefinition to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -94,7 +94,8 @@ Resources:
                 "Effect": "Allow",
                 "Action": [
                   "ecs:DescribeClusters",
-                  "ecs:CreateCluster"
+                  "ecs:CreateCluster",
+                  "ecs:RegisterTaskDefinition"
                 ],
                 "Resource": "*"
               }
