Add ecs:DescribeServices to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -95,6 +95,7 @@ Resources:
                 "Action": [
                   "ecs:CreateCluster",
                   "ecs:DescribeClusters",
+                  "ecs:DescribeServices",
                   "ecs:RegisterTaskDefinition",
                   "iam:PassRole"
                 ],
