Add ec2:CreateVpc to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -105,6 +105,19 @@ Resources:
               }
             ]
           }
+        - PolicyName: Ec2Policy
+          PolicyDocument: {
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Effect": "Allow",
+                "Action": [
+                  "ec2:CreateVpc"
+                ],
+                "Resource": "*"
+              }
+            ]
+          }
 
   GithubOidc:
     Type: AWS::IAM::OIDCProvider
