Add policy to ExecutionRole

--- a/cloud-formation/ecs.yaml
+++ b/cloud-formation/ecs.yaml
@@ -12,6 +12,8 @@ Resources:
             Action: sts:AssumeRole
             Principal:
               Service: ecs-tasks.amazonaws.com
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
       Path: /gocapture/
   TaskRole:
     Type: AWS::IAM::Role
