Add more iam permissions to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -99,6 +99,8 @@ Resources:
                   "ecs:DescribeClusters",
                   "ecs:DescribeServices",
                   "ecs:RegisterTaskDefinition",
+                  "iam:AttachRolePolicy",
+                  "iam:DetachRolePolicy",
                   "iam:PassRole"
                 ],
                 "Resource": "*"
