--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -120,6 +120,7 @@ Resources:
                   "ec2:CreateTags",
                   "ec2:CreateVpc",
                   "ec2:DeleteVpc",
+                  "ec2:DescribeSecurityGroups",
                   "ec2:DescribeVpcs",
                   "ec2:ModifyVpcAttribute"
                 ],
