--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -119,6 +119,8 @@ Resources:
                   "ec2:CreateSubnet",
                   "ec2:CreateTags",
                   "ec2:CreateVpc",
+                  "ec2:DeleteSecurityGroup",
+                  "ec2:DeleteSubnet",
                   "ec2:DeleteVpc",
                   "ec2:DescribeSecurityGroups",
                   "ec2:DescribeVpcs",
