Add ecs:DeleteService to GitHubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -96,6 +96,7 @@ Resources:
                   "ecs:CreateCluster",
                   "ecs:CreateService",
                   "ecs:DeleteCluster",
+                  "ecs:DeleteService",
                   "ecs:DeregisterTaskDefinition",
                   "ecs:DescribeClusters",
                   "ecs:DescribeServices",
