Add ecs:UpdateService permission to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -101,6 +101,7 @@ Resources:
                   "ecs:DescribeClusters",
                   "ecs:DescribeServices",
                   "ecs:RegisterTaskDefinition",
+                  "ecs:UpdateService",
                   "iam:AttachRolePolicy",
                   "iam:DetachRolePolicy",
                   "iam:PassRole"
