Add an internet gateway

--- a/cloud-formation/ecs.yaml
+++ b/cloud-formation/ecs.yaml
@@ -28,6 +28,13 @@ Resources:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: 10.0.0.0/16
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+  VPCGatewayAttachment:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      InternetGatewayId: !Ref InternetGateway
+      VpcId: !Ref Vpc
   SecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
