Add ec2:CreateInternetGateway permission to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -117,6 +117,7 @@ Resources:
               {
                 "Effect": "Allow",
                 "Action": [
+                  "ec2:CreateInternetGateway",
                   "ec2:CreateSecurityGroup",
                   "ec2:CreateSubnet",
                   "ec2:CreateTags",
