--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -125,6 +125,7 @@ Resources:
                   "ec2:DeleteSecurityGroup",
                   "ec2:DeleteSubnet",
                   "ec2:DeleteVpc",
+                  "ec2:DescribeInternetGateways",
                   "ec2:DescribeSecurityGroups",
                   "ec2:DescribeSubnets",
                   "ec2:DescribeVpcs",
