--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -122,6 +122,7 @@ Resources:
                   "ec2:CreateSubnet",
                   "ec2:CreateTags",
                   "ec2:CreateVpc",
+                  "ec2:DeleteInternetGateway",
                   "ec2:DeleteSecurityGroup",
                   "ec2:DeleteSubnet",
                   "ec2:DeleteVpc",
